--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     overflow-x: hidden;
 }
 /*header*/
-header{
+header .head{
     background-color: #0D3562;
     position: absolute;
     top: 0;
@@ -82,6 +82,9 @@ header{
 }
 
 /*cards*/
+.packages{
+    display: none;
+}
 .cards {
     width: 100%;
     display: flex;
@@ -593,4 +596,157 @@ h1 {
     border: 2px solid #214A7A;
     background-color: transparent !important;
     color:#214A7A;
+}
+
+
+.loging{
+    display: none;
+}
+.loging_body {
+    position: relative;
+    top: -25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: url("assets/img/main_img.jpg") no-repeat;
+    background-size: cover;
+    background-position: center;
+
+}
+.loging .wrapper{
+    position: relative;
+    width: 400px;
+    height: 500px;
+    background: transparent;
+    border: 2px solid rgba(255,255,255,.5);
+    border-radius: 20px;
+    backdrop-filter: blur(30px);
+    box-shadow: 0 0 30px rgba(0,0,0,.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+.loging .wrapper .icon-close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45px;
+    height: 45px;
+    background: #162938;
+    font-size: 2em;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom-left-radius:20px;
+    cursor: pointer;
+    z-index: 1;
+}
+.loging .wrapper .icon-close:hover{
+    background:  #292a2e;
+}
+.loging .wrapper .from-box{
+    width: 100%;
+    padding: 4px;
+}
+.loging .from-box-login h2{
+    font-size: 2em;
+    color: #162938;
+    text-align: center;
+}
+.loging .input-box{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    border-bottom: 2px solid #162938;
+    margin: 30px 0;
+}
+.loging .input-box lable{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1em;
+    color: #162938;
+    font-weight: 500;
+    pointer-events: none;
+    transition: .5s;
+}
+.loging .input-box :focus~lable,
+.loging .input-box :valid~lable{
+    top: -5px;
+}
+.loging .input-box input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    color: #162938;
+    font-weight: 600;
+    padding: 0 35px 0 5px;
+}
+.loging .input-box .icon{
+    position: absolute;
+    right: 8px;
+    font-size: 1.2em;
+    color: #162938;
+    line-height: 57px;
+}
+.loging .remember-forgot{
+    font-size: .9em;
+    color: white;
+    font-weight: 500;
+    margin: -15px 0 15px;
+    display: flex;
+    justify-content: space-between;
+}
+.loging .remember-forgot label input{
+    margin-right: 3px;
+}
+.loging .remember-forgot a{
+    color: #162938;
+    text-decoration: none;
+}
+.loging .remember-forgot a:hover{
+    text-decoration: underline;
+}
+.loging .btn{
+    width: 100%;
+    height: 45px;
+    background:  #0D3562;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    color: white;
+    font-weight: 500;
+}
+.loging .btn:hover{
+    background: grey;
+}
+.loging .login-register{
+    font-size: .9em;
+    color: white;
+    text-align: center;
+    font-weight: 500;
+    margin: 25px 0 10px;
+}
+.loging .login-register p a {
+    color:  #0D3562;
+    text-decoration: none;
+    font-weight: 600;
+}
+.loging .login-register p span {
+    color: black;
+    text-decoration: none;
+    font-weight: 600;
+    opacity: 50%;
+}
+.loging .login-register p a:hover{
+    text-decoration: underline;
 }
